# io-disaggregation

./: .gitignore  README.md  documentation.md  other_elements.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: style.yml  test.yml
data/: country_disagg_example.yaml  sector_disagg_example.yaml  test_sector_disagg.yaml
data/canada_provinces/: can_usa_disaggregation.yaml  canada_provinces.yaml  final_demand_prior.csv  technical_coeffs.csv  weights.csv
disag_tools/: cli.py  vector_blocks.py
disag_tools/assembler/: __init__.py  assembler.py
disag_tools/configurations/: __init__.py  config.py
disag_tools/disaggregation/: __init__.py  bottom_blocks.py  constraints.py  disaggregation_blocks.py  final_demand_blocks.py  planted_solution.py  prior_blocks.py  problem.py  solution_blocks.py  targets.py  utils.py
disag_tools/readers/: __init__.py  blocks.py  disaggregation_blocks.py  icio_reader.py  mapping.py  readers.py
examples/: disagg_config.yaml
multi_sector_disagg/configurations/: __init__.py
multi_sector_disagg/readers/: __init__.py  icio_reader.py
multi_sector_disagg/readers/data/: industry_list.yaml
tests/: conftest.py  test_cli.py  test_vector_blocks.py
tests/test_configurations/: test_config.py
tests/test_disaggregation/: test_assembler.py  test_bottom_blocks.py  test_canada_provinces.py  test_constraints.py  test_disaggregation_blocks.py  test_disaggregation_equations.py  test_final_demand_blocks.py  test_planted_solution.py  test_prior_blocks.py  test_problem.py  test_solution_blocks.py  test_targets.py
tests/test_readers/: test_blocks.py  test_disaggregation_blocks.py  test_icio_reader.py
