[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disag_tools"
version = "0.1.0"
description = "Tools for disaggregating IO tables"
authors = [
    {name = "Jose Moran", email = "jose.moran@macrocosm.group"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "cvxpy==1.6.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
]

[project.scripts]
disag = "disag_tools.cli:disaggregate"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["disag_tools", "disag_tools.readers", "disag_tools.configurations"]
package-dir = {disag_tools = "disag_tools"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
#addopts = "-v --cov=disag_tools --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
] 